examples/bad/hold_partial_reuse.mko
// Must fail: non-Copy field already partially moved
struct Box {
    label: string
    n: int
}

fn main() {
    hold let b = Box { label: "x", n: 1 }
    let s = b.label
    print(b.label)
}
